Checkpoint: basic scraper Python objects.
- Scraper C++ source generated using Mako template.
- Scrapers can be created by id or default given type (from Type
  container: MOVIES, TVSHOWS, ARTISTS, ALBUMS, MUSICVIDEOS).
- Scraper object has accessors for various properties (name, type, etc.).
- Sketched out various helper objects (e.g., dependency list, scraper URL).
- Python test program that creates scrapers and dumps properties.
- NfoUrl basic implementation (others require CFileCurl).

--- a/configure.in
+++ b/configure.in
@@ -1462,7 +1462,9 @@ OUTPUT_FILES="Makefile \
     tools/Linux/xbmc.sh \
     tools/Linux/xbmc-standalone.sh \
     tools/TexturePacker/Makefile \
-    tools/EventClients/Clients/OSXRemote/Makefile"
+    tools/EventClients/Clients/OSXRemote/Makefile \
+    test/Makefile \
+    test/lib/setup.py"
 
 # Line below is used so we can use AM_INIT_AUTOMAKE. The corresponding
 # .dummy.am does nothing.
